fix(styles): fix the overflow problem 💄

--- a/client/src/Components/Authentication/Sidebar/Sidebar.scss
+++ b/client/src/Components/Authentication/Sidebar/Sidebar.scss
@@ -7,7 +7,7 @@
 	width: 40%;
 	background-color: var(--secondary-bg);
 	color: var(--text-color);
-	height: 100vh;
+	min-height: 100vh;
 
 	.sidebar_app-brand {
 		div {
