--- a/client/src/Components/Header/header.scss
+++ b/client/src/Components/Header/header.scss
@@ -1,5 +1,5 @@
 header {
-	height: 100vh;
+	min-height: 100vh;
 	position: relative;
 	overflow: hidden;
 	display: flex;
